[package]
name = "scrypt"
version = "0.1.0"
authors = ["enfipy <enfipy@gmail.com>"]
edition = "2018"

[dependencies]
sha2 = { version = "0.8", default-features = false }
pbkdf2 = { version = "0.3", default-features = false }
failure = { version = "0.1", default-features = false, features = ["derive"] }
byteorder = { version = "1", default-features = false }
byte-tools = "0.3"
hmac = "0.7"
